--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.myapplication">
 
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".BackActivity"></activity>
+        <activity android:name=".chestDemo"></activity>
+        <activity android:name=".ShouldersActivity" />
+        <activity android:name=".LegsActivity" />
+        <activity android:name=".ArmActivity" />
+        <activity android:name=".BackActivity" />
         <activity android:name=".ChestActivity" />
         <activity android:name=".Activity2" />
         <activity android:name=".MainActivity">
