--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.myapplication">
 
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,7 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".chestDemo"></activity>
+        <activity android:name=".chestDemo4"></activity>
+        <activity android:name=".chestDemo3" />
+        <activity android:name=".chestDemo2" />
+        <activity android:name=".chestDemo" />
         <activity android:name=".ShouldersActivity" />
         <activity android:name=".LegsActivity" />
         <activity android:name=".ArmActivity" />
